- 2015-03-09:

  - Fix unit test fail with Django 1.7 @nikolas
  - Performance improvement by @theSage21 @stephane
  - Some bugfixes and improvements by @nikolas @zauddelig @bulv1ne

- 2013-12-06:

  - Fixed problem with inputs of type file, that were displayed inside an input text element
  - Added support for Django Form `required_css_class` and `error_css_class`
  - Added CSS class `multiple-checkbox`, to be used to easily hide `<li>`

  contributed by `caumons <https://github.com/caumons>`_

- 2013-8-27:

  Add support for Bootstrap 3
  
  contributed by `Nivl <https://github.com/Nivl>`_


- 2013-5-7:

  Add `radio` support for ChoiceField