@@ -37,6 +37,8 @@ At the top of your template load in our template tags::
 
 Then to render your form::
 
+###### Vertical
+
 	<form role="form">
 	    <legend>Form Title</legend>
 	    {% csrf_token %}
@@ -50,12 +52,39 @@ You can also set class="form-vertical" on the form element.
 
 To use class="form-inline" on the form element, also change the "|boostrap" template tag to "|bootstrap_inline".
 
+
+###### Horizontal
+
 It is also possible to create a horizontal form. The form class and template tag are both changed, and you will also need slightly different CSS around the submit button::
 
 	<form class="form-horizontal">
 	    <legend>Form Title</legend>
 	    {% csrf_token %}
 	    {{ form|bootstrap_horizontal }}
+	    <div class="form-group">
+	      <div class="col-sm-10 col-sm-offset-2">
+	      	<button type="submit" class="btn btn-primary">Submit</button>
+	      </div>
+	    </div>
+	</form>
+
+
+###### Custom/Grid Layout
+
+	For custom layout - use `{% bootstrap  %}` *tag* - each line in it represent bootstrap .row with fields separted by space:
+
+	<form class="form-horizontal">
+	    <legend>Form Title</legend>
+	    {% csrf_token %}
+
+		{% bootstrap form %}
+			char_field choice_field radio_choice
+			multiple_choice multiple_checkbox
+			file_fied password_field
+			textarea
+			boolean_field
+		{% endbootstrap %}
+
 	    <div class="form-group">
 	      <div class="col-sm-10 col-sm-offset-2">
 	      	<button type="submit" class="btn btn-primary">Submit</button>
