@@ -1,0 +1,191 @@
+<div class="row">
+    <div class="col-4">
+
+    <div class="form-group">
+        
+            
+            <label class="control-label  " for="id_char_field">Char field</label>
+            
+    
+            <div class=" ">
+                <input class=" form-control" id="id_char_field" name="char_field" type="text" />
+
+            </div>
+        
+    </div>
+    </div><div class="col-4">
+    
+    <div class="form-group">
+        
+            
+            <label class="control-label  " for="id_choice_field">Choice field</label>
+            
+    
+            <div class=" ">
+                <select class=" form-control" id="id_choice_field" name="choice_field">
+                    <option value="0">Zero</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                </select>
+
+            </div>
+        
+    </div>
+    </div><div class="col-4">
+    
+    <div class="form-group">
+        
+            
+                <label class="control-label  ">Radio choice</label>
+            
+            <div class="">
+                
+                    <div class="radio">
+                        <label>
+                            <input id="id_radio_choice_0" name="radio_choice" type="radio" value="0" />
+                            Zero
+                        </label>
+                    </div>
+                
+                    <div class="radio">
+                        <label>
+                            <input id="id_radio_choice_1" name="radio_choice" type="radio" value="1" />
+                            One
+                        </label>
+                    </div>
+                
+                    <div class="radio">
+                        <label>
+                            <input id="id_radio_choice_2" name="radio_choice" type="radio" value="2" />
+                            Two
+                        </label>
+                    </div>
+                
+
+            </div>
+        
+    </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+    
+    <div class="form-group">
+        
+            
+                <label class="control-label  " for="id_multiple_choice">Multiple choice</label>
+            
+    
+            <div class=" ">
+                <select multiple="multiple" class=" form-control" id="id_multiple_choice" name="multiple_choice">
+                    <option value="0">Zero</option>
+                    <option value="1">One</option>
+                    <option value="2">Two</option>
+                </select>
+
+                
+            </div>
+        
+    </div>
+    </div><div class="col-6">
+    
+    <div class="form-group">
+        
+            
+                <label class="control-label  " for="id_multiple_checkbox">Multiple checkbox</label>
+            
+    
+            <div class=" multiple-checkbox">
+                <ul id="id_multiple_checkbox"><li><label for="id_multiple_checkbox_0"><input id="id_multiple_checkbox_0" name="multiple_checkbox" type="checkbox" value="0" /> Zero</label></li>
+    <li><label for="id_multiple_checkbox_1"><input id="id_multiple_checkbox_1" name="multiple_checkbox" type="checkbox" value="1" /> One</label></li>
+    <li><label for="id_multiple_checkbox_2"><input id="id_multiple_checkbox_2" name="multiple_checkbox" type="checkbox" value="2" /> Two</label></li></ul>
+    
+                
+    
+                
+            </div>
+        
+    </div>
+    </div>
+</div>
+    
+<div class="row">
+    <div class="col-6">
+    
+    <div class="form-group">
+        
+            
+                <label class="control-label  " for="id_file_fied">File fied</label>
+            
+    
+            <div class=" ">
+                <input id="id_file_fied" name="file_fied" type="file" />
+    
+                
+    
+                
+            </div>
+        
+    </div>
+    </div><div class="col-6">
+    
+    <div class="form-group">
+        
+            
+                <label class="control-label  " for="id_password_field">Password field</label>
+            
+    
+            <div class=" ">
+                <input class=" form-control" id="id_password_field" name="password_field" type="password" />
+    
+                
+    
+                
+            </div>
+        
+    </div>
+    </div>
+</div>
+
+    
+<div class="row">
+    
+    <div class="col-12">
+    
+    <div class="form-group">
+        
+            
+                <label class="control-label  " for="id_textarea">Textarea</label>
+            
+    
+            <div class=" ">
+                <textarea class=" form-control" cols="40" id="id_textarea" name="textarea" rows="10">
+                </textarea>
+ 
+                
+            </div>
+        
+    </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-12">
+    
+    <div class="form-group">
+        
+            <div class="">
+                <div class="checkbox">
+                    
+                        <label >
+                            <input id="id_boolean_field" name="boolean_field" type="checkbox" /> <span>Boolean field</span>
+                        </label>
+
+                    
+                </div>
+            </div>
+        
+    </div>
+    </div>
+</div>
