@@ -8,6 +8,7 @@ from bootstrapform import config
 
 register = template.Library()
 
+
 @register.filter
 def bootstrap(element):
     markup_classes = {'label': '', 'value': '', 'single_value': ''}
@@ -78,7 +79,6 @@ def render(element, markup_classes):
             template = get_template("bootstrapform/form.html")
             context = {'form': element, 'classes': markup_classes}
 
-
     if django_version < (1, 8):
         context = Context(context)
 
@@ -103,3 +103,52 @@ def is_radio(field):
 @register.filter
 def is_file(field):
     return isinstance(field.field.widget, forms.FileInput)
+
+
+# {% bootstrap %} tag
+
+@register.tag(name='bootstrap')
+def bootstrap_tag(parser, token):
+    nodelist = parser.parse(('endbootstrap',))
+    try:
+        # Splitting by None == splitting by spaces.
+        tag_name, form = token.contents.split(None, 1)
+    except ValueError:
+        raise template.TemplateSyntaxError(
+            "%r tag requires a form arguments" % token.contents.split()[0]
+        )
+    parser.delete_first_token()
+    return Bootstrap(nodelist, form)
+
+
+class Bootstrap(template.Node):
+    def __init__(self, nodelist, form):
+        self.nodelist = nodelist
+        self.form_variable = form
+    
+    def render(self, context):
+        tag_contents = self.nodelist.render(context)
+        self.form = context[self.form_variable]
+        return ''.join(self._get_rows(tag_contents))
+
+    def _get_rows(self, tag_contents):
+        for i in tag_contents.splitlines():
+            row = i.strip()
+            if not row:
+                continue
+            output = [
+                '<div class="row">',
+                ''.join(self._get_fields(row)),
+                '</div>',
+            ]
+            yield ''.join(output)
+
+    def _get_fields(self, row):
+        field_names = [i.strip() for i in row.split(' ') if i.strip()]
+        col_class = 'col-%d' % (12 // len(field_names))
+        for f in field_names:
+            try:
+                f = self.form[f]
+            except KeyError as e:
+                raise Exception('Failed to process line\n{}\n{}'.format(row, e))
+            yield '<div class="{}">{}</div>'.format(col_class, bootstrap(f))
